2006-09-26  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_xml.erl (reload_driver): Suppression de la fonction, on ne
	peut pas s'en servir en l'état.
	(stop_parser): Après le port_close/1, on décharge la librairie.

2006-09-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Préparation de la release 0.5.1.

	* c_src/expat_drv.c: Ajout d'une commande pour retourner la revision
	du fichier.
	(expat_drv_control): Correction d'un memory leak.

	* src/exmpp_xml.erl: Ajout d'une fonction pour récupérer la revision
	du port driver `expat_drv'.

	* configure.ac, ebin/exmpp.appup, ebin/Makefile.am: Ajout du fichier
	de mise à jour.

2006-09-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.5.0.

	* configure.ac: Mise à jour de la version.

2006-09-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* m4/expat.m4: Corrections de bug dans les flags passés au compilateur
	si l'utilisateur précise --with-expat=DIR.

2006-09-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* ebin/charon.app.in: On ajoute $Id$ pour l'id de l'application.

2006-09-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.4.7.

	* src/exmpp_factory.erl: Correction de la documentation.

	* src/exmpp_xml.erl (load_driver): Correction d'un bug avec le
	chargement de la librairie. En fait, il faut charger la librairie
	autant de fois que open_port est appelé car erl_ddll maintient un
	comptage de référence. C'est pour cette raison qu'avec les version
	précédentes de `exmpp_xml', tous les parsers instanciés étaient
	détruits avec le premier appel à `stop_parser'.

	* c_src/expat_drv.c (expat_drv_stop): Le `return' final est
	complètement inutile.
	(expat_drv_control): En cas de commande inconnue, on retourne `{error,
	badarg}' au lieu de `badarg'.

2006-08-31  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.4.6.

	* include/exmpp.hrl: Ajout du namespace utilisé pour les erreurs au
	niveau stream.
